tests/pass/external.us
exteranl fn sin(a:f32,b:f32) -> f32 {
    
}