tests/fail/not_poly_instance.us
type a = i32;

struct List<T> {
    head:T,
    body:T
}

fn main() -> List<i32> {
    let list = a::<i32> {
        head:10,
        body:10
    };

    list;
}
